--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
-		<dependency>
+		<!-- <dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
-		</dependency>
+		</dependency> -->
 		
 		<dependency>
 		    <groupId>javax.validation</groupId>
