--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,8 @@ spring.datasource.password=
 
 spring.jpa.show-sql=true
 
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6378
+
 #logging.level.root=DEBUG
